# vtt-server

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  config.json  config.toml.default
src/: config.rs  database.rs  error.rs  main.rs  migrations.rs
src/api/: args.rs  mod.rs  structs.rs
src/entities/: mod.rs  token.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/routes/: admin.rs  api.rs  mod.rs
src/routes/admin/: core.rs  mod.rs  user.rs
src/routes/api/: mod.rs  root.rs  token.rs
web/: .gitignore  Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
web/src/: main.rs  structs.rs  util.rs
web/src/components/: app.rs  dialog.rs  mod.rs
web/src/components/users/: manage.rs  mod.rs  modify.rs
web/stylus/: app.styl  button.styl  dialog.styl  mixins.styl  users.styl
