[workspace]
members = ["web"]

[package]
name = "vtt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures = "0.3.21"
sea-orm = { version = "^0.9.0", features = [ "sqlx-sqlite", "runtime-actix-native-tls", "macros" ] }
sea-orm-migration = "^0.9.0"
serde = "1.0.152"
serde_json = "1.0.91"
