[workspace]
members = ["web"]

[package]
name = "vtt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
env_logger = "0.10.0"
futures = "0.3.21"
log = "0.4.17"
sea-orm = { version = "^0.9.0", features = [ "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-actix-native-tls", "macros" ] }
sea-orm-migration = "^0.9.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.5.10"
