[package]
authors = ["Peter Lunneberg"]
description = ""
edition = "2021"
license = "MIT"
name = "vtt-server-web"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.60", features = ["Window"] }
